add @property methods to migration model; use for displaying list of migrations

--- a/GoogleSharePointMigrationAssistant/web/templates/destinations/select-onedrive-folder.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/destinations/select-onedrive-folder.html
@@ -5,7 +5,7 @@
     Please select the OneDrive folder to which you would like to migrate your
     Google Drive data.
   </p>
-  <div class="container bg-light py-2 rounded">
+  <div class="container py-2 rounded">
     <div class="search-container text-center">
       <label for="filter-input">Filter out something specific</label>
       <input class="form-control w-75 dynamic-filter m-1 mb-3 m-auto" id="filter-input" data-searchingon="onedrive-folder-destination-options">
