--- a/GoogleSharePointMigrationAssistant/web/templates/include/steps/start_migration.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/include/steps/start_migration.html
@@ -11,6 +11,7 @@
     on the SharePoint Online site
     <a
       href="{{destination_selected.sharepoint_folder.site.webUrl}}"
+      target="_blank"
       title="open the sharepoint site {{destination_selected.sharepoint_folder.site.displayName}}"
       ><strong
         >{{destination_selected.sharepoint_folder.site.displayName}}</strong
