--- a/GoogleSharePointMigrationAssistant/web/templates/include/steps/select_destination.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/include/steps/select_destination.html
@@ -16,7 +16,7 @@
       </div>
     </div>
   </div>
-  <div class="position-absolute bottom-0 left-0 mb-0 text-start">
+  <div class="position-relative bottom-0 start-0 mb-0 text-start mt-4">
     <a
       href="{% url 'change-source' %}"
       title="Change the migration source"
