--- a/GoogleSharePointMigrationAssistant/web/templates/migrations/list.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/migrations/list.html
@@ -6,7 +6,7 @@
       <thead>
         <tr><p>Your Data Migrations</p></th>
         <tr>
-          <th colspan="2" class="text-center border-right"><i class="fa fa-brands fa-google"></i> Source
+          <th colspan="3" class="text-center border-right"><i class="fa fa-brands fa-google"></i> Source
           </th>
           <th  colspan="4" class="text-center border-left"><i class="fa fa-brands fa-microsoft"></i> Destination
           </th>
@@ -15,6 +15,7 @@
       <tr>
         <th>Type</th>
         <th>Name</th>
+        <th>Scans</th>
         <th>Type</th>
         <th>Folder</th>
         <th>Site</th>
@@ -27,6 +28,10 @@
           <tr>
             <td>{{mig.source_type}}</td>
             <td>{{mig.source_name}}</td>
+            <td>
+              <a href="{% url 'scan-source-report' migration_id=mig.id %}" title="view the scan result for migration {{mig.id}}"
+              class="btn btn-sm btn-outline-light m-2">View Scan Result</a>
+            </td>
             <td>{{mig.target_type}}</td>
             <td>{{mig.target_folder_name}}</td>
             {% if mig.target_type == 'sharepoint_folder' %}
