--- a/GoogleSharePointMigrationAssistant/web/templates/include/steps/start_migration.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/include/steps/start_migration.html
@@ -19,7 +19,7 @@
     {% elif destination_selected.onedrive_folder %}
     the <strong>{{destination_selected.onedrive_folder.name}}</strong> folder in your OneDrive. {% endif %}
 
-    The scan will provide information about potential data than cannot be migrated 
+    The scan will provide key insights about your data, including information about items that cannot be migrated 
     due to incompatibility with the target environment. 
   </p>
   <a
