update m365 login step to not include overly detailed information

--- a/GoogleSharePointMigrationAssistant/web/templates/include/steps/m365_login.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/include/steps/m365_login.html
@@ -1,7 +1,7 @@
 <div class="text-center h-100">
   <p class="lead">
     Log into Microsoft 365 and authorize this application to access your
-    OneDrive and SharePoint content via Azure OAuth.
+    OneDrive and SharePoint data. 
   </p>
   {% if not m365_user %}
   <a
