--- a/GoogleSharePointMigrationAssistant/web/templates/next-steps.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/next-steps.html
@@ -8,8 +8,8 @@
       {% include 'include/steps/select_source.html' %} 
     {% elif step == 'select_destination' %} 
       {% include 'include/steps/select_destination.html' %} 
-    {% elif step == 'start_migration' %} 
-      {% include 'include/steps/start_migration.html' %} 
+    {% elif step == 'start_scan' %} 
+      {% include 'include/steps/start_scan.html' %} 
     {% endif %}
 </div>
 
