--- a/GoogleSharePointMigrationAssistant/web/templates/include/steps/start_scan.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/include/steps/start_scan.html
@@ -17,7 +17,7 @@
         >{{destination_selected.sharepoint_folder.site.displayName}}</strong
       ></a>. 
     {% elif destination_selected.onedrive_folder %}
-    the <strong>{{destination_selected.onedrive_folder.name}}</strong> folder in your OneDrive. {% endif %}
+    the <strong>{{destination_selected.onedrive_folder.folder.name}}</strong> folder in your OneDrive. {% endif %}
 
     The scan will provide key insights about your data, including information about items that cannot be migrated 
     due to incompatibility with the target environment. 
