update name of app

--- a/GoogleSharePointMigrationAssistant/web/templates/include/master.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/include/master.html
@@ -75,7 +75,7 @@
     <footer class="mt-5">
       <div class="container ">
         <div class="footer-col">
-          Copyright &copy; 2022 GSP Migration Assistant
+          Copyright &copy; 2022 Go365 Migrator
         </div>
         <div class="footer-col">
           <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a> |
