--- a/GoogleSharePointMigrationAssistant/web/templates/include/nav.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/include/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg">
-  <a class="navbar-brand text-light" href="{% url 'home' %}">GSP Migration Assistant</a>
+  <a class="navbar-brand text-light" href="{% url 'home' %}">Go365 Migrator</a>
   <button
     class="navbar-toggler"
     type="button"
